Bug#23491 MySQLDump prefix function call in a view by database name - mysqldump executes a SHOW CREATE VIEW statement to generate the text that it outputs.  When the function name is retrieved it's database name is unconditionally prepended.  This change causes the function's database name to be prepended only when it was used to define the function.